Revert "Fix account menu long text wrapping"
This reverts commit bf8b0473d915188b9a5c842e59d20cccafb9063c.

--- a/ui/components/app/account-menu/index.scss
+++ b/ui/components/app/account-menu/index.scss
@@ -59,7 +59,6 @@
 
     &__text {
       @include Paragraph;
-      letter-spacing: -0.015rem;
     }
 
     &__subtext {
